# four-ai

./: .gitignore  Cargo.toml  README.md  build.rs
benches/: matrix_bench.rs  pool_bench.rs
src/: .main.rs.swp  color.rs  game.rs  helpers.rs  lib.rs  main.rs  matrix.rs
src/ai/: agent.rs  matrix.rs  mod.rs  nn.rs  nn_player.rs  pool.rs  prec.rs  random_player.rs  run.rs
src/ai/nn_agent/: mod.rs  nn_player.rs
