[package]
name = "connect-four-ai"
version = "0.1.0"
authors = ["Monlih <MonliH@users.noreply.github.com>"]
edition = "2018"

[lib]
name = "fourai"
path = "src/lib.rs"

[dependencies]
rand = "0.7"
rayon = "1.3.0"

serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11.1"
rblas = "0.0.13"
libc = "0.2.0"

[dev-dependencies]
criterion = "0.3"

[profile.release]
lto = true

[[bench]]
name = "matrix_bench"
harness = false
